--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -238,7 +238,7 @@ queue_4 : "⏳ Sıraya eklendi **#{0}\n\n💫Başlık:** {1}\n**⏱Süre:** {2}\
 queue_5 : "Sırada Sadece Bir Parça Var, Lütfen Biraz Daha Parça Ekleyin. 💫"
 
 # All Streaming Lines
-stream_1 : "🎧 **Başlık:** {0}\n\n⭐ **Talep Eden:** {0}\n✨ **Bilgi: **[Buradan]({1})"
+stream_1 : "🎧 **Başlık:** [{0}]\n\n⭐ **Talep Eden:** {0}\n✨ **Bilgi: **[Buradan]({1})"
 stream_2 : "🎧 **URL ile Yayına Başlandı **\n\n⭐ **Talep Eden: {0}**"
 stream_3 : "**🎧 Başlık:** {0}\n⌛️**Süre**: {1}\n⭐ **Talep Eden: {2}**"
 stream_4 : "**🎧 Başlık:** [{0}]({1})\n⌛️**Süre**: {2}\n⭐**Talep Eden: {3}**"
