--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -327,7 +327,7 @@ ST_B_26 : "🗑 Komutları Sil"
 ST_B_27 : "🧑‍🚀 Tavsiye Modu"
 
 #Song
-SG_B_1 : "↗️ Fm Kanalımız"
+SG_B_1 : "↗️ Fm Kanal"
 SG_B_2 : "🔊 Müzik"
 SG_B_3 : "🎥 Video"
 
